# HOA

./: .gitignore  .gitmodules  ARKUI-X_PATCHES.md  BUILD.md  DETAIL.md  FOUND.md  PLAN.md  PROGRESS.md  VERIFICATION.md  gradle.properties
.github/workflows/: android.yml
agents/: PLAN.md  PROGRESS.md  README.md  SUMMARY.md  abc-bytecode-format.md  abc-path-routing.md  arkui-rendering-android.md  arkui-x-android-build.md  arkui-x-android-init.md  arkui-x-build-system.md  arkui-x-script-loading.md  bundle-vs-esmodule.md  ecmavm-creation.md  hap-resource-integration.md  information-gap-analysis.md  jni-bridge-analysis.md  libarkui-android-contents.md  module-record-mismatch.md  napi-module-registration.md  napi-module-resolution.md  ohos-build-pipeline.md  ohos-hap-boot-flow.md  ohos-script-loading.md  platform-abstraction-layer.md  srcEntry-to-entrypoint-chain.md  stage-model-architecture.md  symbol-visibility-control.md  technical-plan.md  test-hap-analysis.md  why-patch-needed.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/arkui-x/test/: etsstdlib.abc  fibonacci.abc  hello.abc
app/src/main/cpp/: CMakeLists.txt  hongengine_jni.cpp
app/src/main/java/app/hackeris/hoa/: DevTestActivity.kt  HoaAbilityActivity.kt  HoaApplication.kt  MainActivity.kt  Stage1Verifier.kt
app/src/main/res/layout/: activity_devtest.xml  activity_main.xml  item_hap.xml
app/src/test/resources/: test_app.hap
docs/: ARKUI-X_PATCHES.md  BUILD.md
gradle/: libs.versions.toml
scripts/: setup-runtime.sh  setup_arkui_x.sh  sync_arkui_x.sh
(+5 files in other folders)
